css minor issues fixed - not responsive yet

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,11 @@
 *= require_self
 */
 
+body {
+    font-family: "HelveticaNeue-UltraLight", "HelveticaNeue UltraLight", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    background-size: cover;
+  }
+
 .container-fluid {
 padding-left: 0px;
 padding-right: 0px;
@@ -59,7 +64,7 @@ font-size: 20px;
 }
 
 .signin_field {
-font-family: 'HelveticaNeue-UltraLight';
+font-family: 'HelveticaNeue-Light';
 color: white;
 font-size: 15px;
 margin-top: 10px;
@@ -67,7 +72,7 @@ margin_bottom:10px;
 }
 
 .landing_page_login_link {
-font-family: 'HelveticaNeue-UltraLight';
+font-family: 'HelveticaNeue-Light';
 color: white !important;
 font-size: 20px;
 }
